_lib/applications/freshrss/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
  labels:
    app: "freshrss"
    th0th.dev/policy-target: "application"
    ${GATEWAY_NAME}: "true"
