_lib/applications/freshrss/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/instance: freshrss-${ENVIRONMENT}
    app.kubernetes.io/version: "${FRESHRSS_VERSION}"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
  selector:
    app: freshrss
    node: worker
