_lib/applications/freshrss/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss-internal
  namespace: freshrss
  labels:
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/instance: freshrss-${ENVIRONMENT}
    environment: "${ENVIRONMENT}"
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: networking
  hostnames:
    - "${FRESHRSS_SUBDOMAIN}.th0th.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: freshrss
          port: 80
